app/styles/au-kaleidos-css/_auk-additions.scss
/* General
   ========================================================================== */

p {
  word-break: break-word;
  white-space: normal;
   &::first-letter {
    text-transform: uppercase;
  }
}


/* Button in input
   ========================================================================== */

.auk-button-in-input {
  position: absolute;
  bottom: 0;
  right: 0;
  padding: 0.75rem 1.2rem;
}


/* Modal
   ========================================================================== */

.auk-modal-backdrop > .ember-view {
  height: 100%;
}


/* Table
   ========================================================================== */

.auk-table th {
  white-space: nowrap;
}

// Data table header title
.auk-table__header-title {
  // Data table header title sortable modifier
  &--sortable {
    text-decoration: none;

    .auk-table__header-title__sort-icon {
      opacity: 0;
    }

    &:hover,
    &:focus {
      text-decoration: underline;

      .auk-table__header-title__sort-icon {
        opacity: 0.5;
      }
    }

    // Data table header title sortable modifier active
    &-active {
      .auk-table__header-title__sort-icon {
        opacity: 1;
      }
    }
  }
}

.auk-table--no-scroll {
  .data-table-content {
    overflow: hidden;
  }
}

.auk-table--hover {
  tbody {
    tr:hover {
      background: $auk-gray-100;
    }
  }

  &.auk-table--striped {
    tbody {
      tr:hover {
        background: $auk-gray-200;

        td {
          background-color: transparent;
        }
      }
    }
  }
}

.auk-table__header-title--unsortable {
  color: $dove-gray;
}

.auk-table--interaction-cursor {
  cursor: pointer;
}

.auk-table {
  .data-table,
  &.data-table {
    tbody {
      tr:hover {
        background: $auk-gray-100;
      }
    }
  }
}

.auk-table--striped {
  .data-table,
  &.data-table {
    tbody {
      tr:hover {
        background: $auk-gray-200;

        td {
          background-color: transparent;
        }
      }
    }
  }
}

/* Table with sticky header

    Remark:
    Fixing the border-related issue (as seen here: https://stackoverflow.com/questions/50361698/border-style-do-not-work-with-sticky-position-element) caused by putting `position: sticky` on th's is done here by switching border-collapse to `separate`.
    We can use this switch without creating visual issues because there are no consecutive borders within the auk-table styling.

    If this should change in the future, we could also rely on the following fix:

    th {
      border-bottom-width: 0;
      padding-bottom: 1.4rem;
      box-shadow: inset 0 -2px 0 $auk-gray-300;
    }

   ========================================================================== */

.auk-table--sticky-header {
  border-collapse: separate;

  th {
    position: sticky;
    top: 0;
    background-color: #fff;
  }
}


/* Block-link (to be removed in favor of list element)
   ========================================================================== */

.auk-block-link {
  padding: 1.5rem;
  border: .1rem solid $auk-gray-300;
  text-decoration: none;
  color: $auk-gray-800;
  margin: 0 0 1.5rem;
  display: block;

  &:hover {
    background: $auk-gray-100;
    border-color: $auk-gray-500;
  }

  &:focus {
    outline: 0;
    border-color: $auk-yellow-500;
    box-shadow: inset 0 0 0 0.1rem $auk-yellow-500;
  }
}


/* Scroll wrapper
   ========================================================================== */

.auk-scroll-wrapper__body--horizontal {
  overflow-y: hidden;
}

.auk-scroll-wrapper__body--vertical {
  overflow-x: hidden;
}


/* Form-group: power-select alternative (to be removed)
   ========================================================================== */

.auk-form-group--power-select {
  width: 23rem;
}


/* Printable agenda list
   ========================================================================== */

.l-printable-agenda {
  // line-height: 1.5;

  p {
    color: $color-text;
    line-height: 1.5;
  }

  .auk-pill,
  .auk-icon {
    -webkit-print-color-adjust: exact;
  }
}

@media print {
  .l-printable-agenda {
    max-width: none;
  }
}

.l-printable-agenda__header {
  margin: 2.6rem 0 5.2rem;
}

.l-printable-agenda__header-prefix {
  min-width: 3rem;
}

.l-printable-agenda__section-header {
  font-size: 2rem;
  font-weight: 500;
}

.l-printable-agenda__section-content {
  margin-left: 3rem;
}

.l-printable-agenda__item-group {
  margin-top: 4rem;
}

.l-printable-agenda__non-breakable-group {
  break-inside: avoid;
}

.l-printable-agenda__item-group-header {
  line-height: 1.2;
}

.l-printable-agenda__item-group-header--muted {
  color: $auk-gray-500 !important;
  -webkit-print-color-adjust: exact;
}

.l-printable-agenda__item,
.l-printable-agenda__faux-item {
  + .l-printable-agenda__item {
    margin-top: 3rem;
  }
}

.l-printable-agenda__item-header {
  font-size: 1.6rem;
  font-weight: 500;

  .l-printable-agenda__header-prefix {
    min-width: 2.5rem;
  }
}

.l-printable-agenda__item-list {
  break-inside: auto;
}

.l-printable-agenda__document-list {
  list-style: none !important;
}

.l-printable-agenda__item-indented {
  padding-left: 2.5rem;
}


/* Preview container
   ========================================================================== */

.auk-preview-container {
  img {
    max-width: 20rem;
    max-height: 20rem;
  }
}


/* Publication overview navbar (to be removed)
   ========================================================================== */

.auk-publication-overview-navbar {
  ul.auk-menu {
    background-color: transparent !important;
  }
}

/* Signature overview navbar (to be removed)
   ========================================================================== */

.auk-signature-overview-navbar {
  ul.auk-menu {
    background-color: transparent !important;
  }
}


/* Color badge - default color (to be removed)
   ========================================================================== */

.auk-color-badge--default {
  background-color: $auk-gray-500;
}


/* Utilities
   ========================================================================== */

.auk-u-text-uppercase {
  text-transform: uppercase;
}

.auk-u-text-capitalize {
  &::first-letter {
    text-transform: uppercase;
  }
}

.auk-u-text-condensed-line-height { // (to be removed)
  line-height: 1.2 !important;
}

.auk-u-text-success {
  color: $success-text-color;
}

.auk-u-text-error {
  color: $error-text-color;
}

.auk-u-border-top {
  border-top: .1rem solid $auk-gray-300 !important;
}

.auk-u-border-right {
  border-right: .1rem solid $auk-gray-300 !important;
}

.auk-u-border-bottom {
  border-bottom: .1rem solid $auk-gray-300 !important;
}

.auk-u-border-left {
  border-left: .1rem solid $auk-gray-300 !important;
}

.auk-u-text-family-serif {
  font-family: flanders-serif, serif !important;
}

@media print {
  .auk-u-m-0\@print {
    margin: 0 !important;
  }
}

.auk-u-position-relative {
  position: relative !important;
}


/* Publications table
   ========================================================================== */

.auk-case-name-header {
  min-width: 25rem;
}

/* Batch editing document details
   ========================================================================== */

.to-be-deleted-row {
  opacity: 0.5;
}

/* Layout styling for logo-header utility
   ========================================================================== */

.l-logo-header {
  height: 100px;
  padding: 1.5rem 0;

  > img {
    max-height: 100%;
  }
}

